rust/bindings/adbc.rs


 Statements may represent queries or prepared statements.

 Statements may be used multiple times and can be reconfigured
 (e.g. they can be reused to execute multiple different queries).
 However, executing a statement (and changing certain other state)
 will invalidate result sets obtained prior to that execution.

 Multiple statements may be created from a single connection.
 However, the driver may block or error if they are used
 concurrently (whether from a single thread or multiple threads).

 Statements are not required to be thread-safe, but they can be
 used from multiple threads so long as clients take care to
 serialize accesses to a statement.*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AdbcStatement {
    /**Opaque implementation-defined state.
 This field is NULLPTR iff the connection is unintialized/freed.*/
    pub private_data: *mut ::std::os::raw::c_void,
    /**The associated driver (used by the driver manager to help
 track state).*/
    pub private_driver: *mut AdbcDriver,
}
#[test]
fn bindgen_test_layout_AdbcStatement() {
    const UNINIT: ::std::mem::MaybeUninit<AdbcStatement> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<AdbcStatement>(),
        16usize,
        concat!("Size of: ", stringify!(AdbcStatement)),
    );
    assert_eq!(
        ::std::mem::align_of::<AdbcStatement>(),
        8usize,
        concat!("Alignment of ", stringify!(AdbcStatement)),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).private_data) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcStatement),
            "::",
            stringify!(private_data),
        ),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).private_driver) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcStatement),
            "::",
            stringify!(private_driver),
        ),
    );
}
///The partitions of a distributed/partitioned result set.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AdbcPartitions {
    ///The number of partitions.
    pub num_partitions: usize,
    /**The partitions of the result set, where each entry (up to
 num_partitions entries) is an opaque identifier that can be
 passed to AdbcConnectionReadPartition.*/
    pub partitions: *mut *const u8,
    ///The length of each corresponding entry in partitions.
    pub partition_lengths: *const usize,
    /**Opaque implementation-defined state.
 This field is NULLPTR iff the connection is unintialized/freed.*/
    pub private_data: *mut ::std::os::raw::c_void,
    /**Release the contained partitions.

 Unlike other structures, this is an embedded callback to make it
 easier for the driver manager and driver to cooperate.*/
    pub release: ::std::option::Option<
        unsafe extern "C" fn(partitions: *mut AdbcPartitions),
    >,
}
#[test]
fn bindgen_test_layout_AdbcPartitions() {
    const UNINIT: ::std::mem::MaybeUninit<AdbcPartitions> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<AdbcPartitions>(),
        40usize,
        concat!("Size of: ", stringify!(AdbcPartitions)),
    );
    assert_eq!(
        ::std::mem::align_of::<AdbcPartitions>(),
        8usize,
        concat!("Alignment of ", stringify!(AdbcPartitions)),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).num_partitions) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcPartitions),
            "::",
            stringify!(num_partitions),
        ),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).partitions) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcPartitions),
            "::",
            stringify!(partitions),
        ),
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).partition_lengths) as usize - ptr as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcPartitions),
            "::",
            stringify!(partition_lengths),
        ),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).private_data) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcPartitions),
            "::",
            stringify!(private_data),
        ),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).release) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(AdbcPartitions),
            "::",
            stringify!(release),
        ),
    );
}
/**An instance of an initialized database driver.

 This provides a common interface for vendor-specific driver
 initialization routines. Drivers should populate this struct, and
 applications can call ADBC functions through this struct, without
 worrying about multiple definitions of the same symbol.*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AdbcDriver {
    /**Opaque driver-defined state.
 This field is NULL if the driver is unintialized/freed (but
 it need not have a value even if the driver is initialized).*/
    pub private_data: *mut ::std::os::raw::c_void,
    /**Opaque driver manager-defined state.
 This field is NULL if the driver is unintialized/freed (but
 it need not have a value even if the driver is initialized).*/
    pub private_manager: *mut ::std::os::raw::c_void,
    /**Release the driver and perform any cleanup.
